# VideoRecorder

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
VideoRecorderCore/: CMakeLists.txt  build.gradle
VideoRecorderCore/src/main/: AndroidManifest.xml
VideoRecorderCore/src/main/assets/shader/: fragment_shader_2d.glsl  fragment_shader_oes.glsl  vertex_shader.glsl
VideoRecorderCore/src/main/cpp/: BufferUtils.h  Matrix4.cpp  Matrix4.h  native-lib.cpp
VideoRecorderCore/src/main/cpp/gdx2d/: Gdx2DPixmap.cpp  Gdx2DPixmap.h
VideoRecorderCore/src/main/java/com/erlei/gdx/files/: APKExpansionSupport.java  AndroidFileHandle.java  AndroidFiles.java  AndroidZipFileHandle.java  AssetErrorListener.java  FileHandle.java  FileType.java  Files.java  TextureLoader.java  ZipResourceFile.java
VideoRecorderCore/src/main/java/com/erlei/gdx/graphics/: Align.java  Color.java  Cubemap.java  CubemapData.java  FacedCubemapData.java  FloatFrameBuffer.java  FloatTextureData.java  FrameBuffer.java  FrameBufferCubemap.java  GLFrameBuffer.java  GLOnlyTextureData.java  GLTexture.java  IndexArray.java  IndexBufferObject.java  IndexBufferObjectSubData.java  IndexData.java  PixmapTextureData.java  Texture.java  TextureData.java  VertexArray.java  VertexAttribute.java  VertexAttributes.java  VertexBufferObject.java  VertexBufferObjectSubData.java  VertexBufferObjectWithVAO.java  VertexData.java
VideoRecorderCore/src/main/java/com/erlei/gdx/math/: Affine2.java  BoundingBox.java  Circle.java  MathUtils.java  Matrix3.java  Matrix4.java  NumberUtils.java  PixmapPacker.java  Quaternion.java  RandomXS128.java  Rectangle.java  Scaling.java  Vector2.java  Vector3.java
VideoRecorderCore/src/main/java/com/erlei/gdx/utils/: Array.java  Pool.java  (+26 more)
libgdx-for-android/: CMakeLists.txt  build.gradle
libgdx-for-android/src/androidTest/java/com/erlei/gdx/: ExampleInstrumentedTest.java
libgdx-for-android/src/main/: AndroidManifest.xml
libgdx-for-android/src/main/cpp/: BufferUtils.cpp  ETC1.cpp  ETC1.h  Gdx2DPixmap.cpp  Matrix4.cpp
libgdx-for-android/src/main/cpp/android/: AndroidGL20.cpp  AndroidGL20.h
libgdx-for-android/src/main/cpp/etc1/: etc1_utils.cpp
libgdx-for-android/src/main/cpp/gdx2d/: gdx2d.c
libgdx-for-android/src/main/java/com/erlei/gdx/: Application.java  Files.java  Gdx.java  LifecycleListener.java  Preferences.java  Version.java
libgdx-for-android/src/main/res/values/: strings.xml
libgdx-for-android/src/test/java/com/erlei/gdx/: ExampleUnitTest.java
(+569 files in other folders)
